Changelog for Yii User Management Module (Yum) 

New in 0.8:
- Made users/admin CGridView filterable
- added qwerty's CPasswordValidator and ability to configure the password requirements in the Application configuration

New in 0.7:
- Added User Control Panel (thyseus)
- fixed many glitches of 0.6
- rearranged submodule hierarchy
- added useYiiCheckAccess() in module config if you want to use yii's checkAccess() method
- a user now can only administrate User he should be able to

New in 0.6:
Features:
- Added confirmation for Account deletion (thyseus)
- Renamed disableEmailActivation to enableEmailActivation (defaults to true) (thyseus)
- Registration Form is now more intelligent and saves already inserted profile Fields after Validation (thanks to peterlap...@hotmail.com)
- Added Layout for installation
- Added YumHelper class (tomasz.suchanek)
- Added YumMenuItemHelper class (tomasz.suchanek)
- Added YumWebModule class (tomasz.suchanek)
- Added profile field grouping functionality (tomasz.suchanek)
- Added allowCaptcha property to UserModule, to controle whether Captcha is required (tomasz.suchanek)
- Added new column for profile field definition: hint (tomasz.suchanek) 
- Added getFormattedName to YumProfile (tomasz.suchanek)
- Updated AR models documentation with phpdoc @property improve code usage (tomasz.suchanek)
- Yum can by used as submodule. To avoid names confict all models are renamed:
 * Messages => YumMessages,
 * Profile => YumProfile,
 * ProfileField => YumProfileField,
 * RegistrationForm => YumRegistrationForm,
 * Role => YumRole
 * User => YumUser,
 * UserChangePassword => YumUserChangePassword,
 * UserLogin => YumUserLogin,
 * UserRecoveryForm => YumUserRecoveryForm.
 .. following components:
 * UserIdentity => YumUserIdentity,
 * WebUser => YumWebUser, 
 .. following controllers
 * DefaultController => YumDefaultController,
 * InstallController => YumInstallcontroller,
 * MessageController => YumMessageController,